@startuml
title SmartHome Devices Management ER Diagram

top to bottom direction

entity Device {
  * id: uuid
  --
  * home_id: uuid
  * type: enum (heating_system, camera, gate, lamp etc...)
  * name: string
  * model: string
  * serial_number: string
  * status: enum (on, off, turning_off, turning_on, start_registering, start_removing)
}

entity Home {
  * id: uuid
  --
  * user_id: uuid
  * name: string
  * address: string
}

entity User {
  * id: uuid
  --
  * name: string
}

Home }|..|| User
Device }|..|| Home
@enduml